# FIZYKA2019

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_and_run.sh  main.py  python_test.py
include/: Engine.h  EntropyCounter.h  Particle.h  ParticleSystem.h  RenderSystem.h  constants.h  utils.h
shaders/: fragment.glsl  geometry.glsl  vertex.glsl
src/: Engine.cpp  EntropyCounter.cpp  ParticleSystem.cpp  RenderSystem.cpp  graph.py  main.cpp
